--- a/.github/ISSUE_TEMPLATE/FORM-NAME.yml
+++ b/.github/ISSUE_TEMPLATE/FORM-NAME.yml
@@ -1,62 +1,45 @@
-name: Bug Report
-description: File a bug report
-title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - octocat
+name: Issue Template
+about: Create an issue template for this repository
+
+title: '[Insert concise title of the issue]'
+
+labels: |
+  - bug
+  - feature request
+  - documentation improvement
+  - other
+
+assignees: ''
+
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
+        **Description**
+        * **Tool Category**: (Select one: Front-end Development, Back-end Development, Version Control, No-Code Tools, AI-Powered Tools, Design Assets, etc.)
+        * **Tool Name**: (Insert name of the tool)
+        * **Issue Type**: (Select one: Bug Report, Feature Request, Documentation Improvement, Other)
+        * **Description**: Please provide a detailed description of the issue, including any relevant context, error messages, or screenshots.
+
+  - type: markdown
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
-  - type: textarea
-    id: what-happened
+      value: |
+        **Steps to Reproduce** (if applicable):
+        1. [Insert step 1]
+        2. [Insert step 2]
+        3. [Insert step 3]
+
+  - type: markdown
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
-    validations:
-      required: true
-  - type: dropdown
-    id: version
+      value: |
+        **Expected Behavior** (if applicable):
+        * What did you expect to happen?
+        * What did happen instead?
+
+  - type: markdown
     attributes:
-      label: Version
-      description: What version of our software are you running?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-    validations:
-      required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+      value: |
+        **Additional Information** (if applicable):
+        * Operating System: [Insert OS]
+        * Browser: [Insert browser]
+        * Version: [Insert version]
