--- a/.github/ISSUE_TEMPLATE/FORM-NAME.yml
+++ b/.github/ISSUE_TEMPLATE/FORM-NAME.yml
@@ -12,6 +12,12 @@ labels: |
 assignees: string
 
 body:
+  - type: input
+    id: contact
+    attributes:
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. email@example.com
   - type: markdown
     attributes:
       value: |
