--- a/.github/ISSUE_TEMPLATE/FORM-NAME.yml
+++ b/.github/ISSUE_TEMPLATE/FORM-NAME.yml
@@ -1,51 +1,54 @@
 name: Issue Template
 description: Create an issue template for this repository
 
-title: '[Insert concise title of the issue]'
-
-labels: |
-  - bug
-  - feature request
-  - documentation improvement
-  - other
-
-assignees: string
-
 body:
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-  - type: markdown
-    attributes:
-      value: |
-        **Description**
-        * **Tool Category**: (Select one: Front-end Development, Back-end Development, Version Control, No-Code Tools, AI-Powered Tools, Design Assets, etc.)
-        * **Tool Name**: (Insert name of the tool)
-        * **Issue Type**: (Select one: Bug Report, Feature Request, Documentation Improvement, Other)
-        * **Description**: Please provide a detailed description of the issue, including any relevant context, error messages, or screenshots.
+  type: markdown
+  attributes:
+    value: |
+      ## **Describe the Issue**
 
-  - type: markdown
-    attributes:
-      value: |
-        **Steps to Reproduce** (if applicable):
-        1. [Insert step 1]
-        2. [Insert step 2]
-        3. [Insert step 3]
+      Please provide a clear and concise description of the problem.
 
-  - type: markdown
-    attributes:
-      value: |
-        **Expected Behavior** (if applicable):
-        * What did you expect to happen?
-        * What did happen instead?
+      * **Tool Category**: (Select one: Front-end Development, Back-end Development, Version Control, No-Code Tools, AI-Powered Tools, Design Assets, etc.)
+      * **Tool Name**: (Insert name of the tool)
+      * **Issue Type**: (Select one: Bug Report, Feature Request, Documentation Improvement, Other)
+      * **Description**: Please provide a detailed description of the issue, including any relevant context, error messages, or screenshots.
 
-  - type: markdown
-    attributes:
-      value: |
-        **Additional Information** (if applicable):
-        * Operating System: [Insert OS]
-        * Browser: [Insert browser]
-        * Version: [Insert version]
+  type: markdown
+  attributes:
+    value: |
+      ## **Steps to Reproduce** (if applicable)
+      Please describe the steps necessary to reproduce the issue.
+
+      1. [Insert step 1]
+      2. [Insert step 2]
+      3. [Insert step 3]
+
+  type: markdown
+  attributes:
+    value: |
+      ## **Expected Behavior** (if applicable)
+      Describe what you expected to happen.
+
+  type: markdown
+  attributes:
+    value: |
+      ## **Actual Behavior** (if applicable)
+      Describe what actually happened.
+
+  type: markdown
+  attributes:
+    value: |
+      ## **Additional Information** (if applicable)
+      Provide any additional details that might be helpful.
+
+      * **Operating System**: [Insert OS]
+      * **Browser**: [Insert browser]
+      * **Version**: [Insert version]
+
+  type: input
+  id: contact
+  attributes:
+    label: Contact Details
+    description: How can we get in touch with you if we need more info?
+    placeholder: ex. email@example.com
